welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:3: error: value ||! is not a member of Boolean
	 { (!((b<13))||!(b>19))}
                     ^